[project]
name = "console-chat-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4~=4.12.3",
    "markdownify~=0.12.1",
    "mcp~=1.1.2",
    "pillow~=11.1.0",
    "psutil~=6.1.1",
    "pypdf~=5.4.0",
    "questionary~=2.0.1",
    "requests~=2.32.0",
    "rich~=13.7.0",
    "simple-term-menu~=1.6.4",
    "termcolor~=2.4.0",
    "textual~=1.0.0",
    "toml~=0.10.2",
    "unichat~=3.6.3",
]
